[package]
name = "pvp-macro"
version = "0.0.1"
edition = "2021"

[dependencies]
fltk = "^1.4"
include_dir = "0.7.4"
webbrowser = "1.0.1"
rand = "0.8.5"
rdev = { version = "0.5.3", features = [ "serialize" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"

[profile.release]
opt-level ="z"
panic = "abort"
